ModuleMaker: avoid duplicates in module's classpath